Java 16 changes and some tests